<resources>
    <string name="app_name">MyStoryApp2Intermediate</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="sign_in">Sign In</string>
    <string name="login">LOGIN</string>
    <string name="enter_name">Enter Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="register">REGISTER</string>
    <string name="create_password">Create Password</string>
    <string name="description">Description</string>
    <string name="name">Name</string>
    <string name="camera">CAMERA</string>
    <string name="gallery">GALLERY</string>
    <string name="upload">Upload</string>
    <string name="no_permission">No Permission</string>
    <string name="fail_capture">Failed to capture image,</string>
    <string name="logout">Logout</string>
    <string name="judul">MyStoryAppSubmission</string>
    <string name="image">Image</string>
    <string name="add_story">Add Story</string>
    <string name="email_invalid">Email address is not valid!</string>
    <string name="wrong_password_less_6">Minimum 6 Character Required</string>
    <string name="empty_name">Please Enter a Name!</string>
    <string name="empty_email">Please Enter an Email!</string>
    <string name="empty_password">Please Enter an Password!</string>
    <string name="feature_not_ready">This feature will come out soon.</string>
    <string name="failed_retrofit">Instance Retrofit Failed</string>
    <string name="choose_a_picture">Choose a Picture</string>
    <string name="change_to_otherside_camera">Change to Front or Back Camera</string>
    <string name="shot_camera">Press The Button to Start Capturing Image</string>
    <string name="success_registration">Registration Success</string>
    <string name="failed_registration">Registration Failed</string>
    <string name="story_uploaded">Story uploaded</string>
    <string name="upload_story_failed">Upload story failed</string>
    <string name="share_your_story">Share your story</string>
    <string name="map_openned">Map Openned</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="failed_to_show_camera">Failed to Show Camera.</string>
    <string name="retry">Try Again</string>
    <string name="location_not_found">Location is not found. Try Again</string>
    <string name="Map">Map</string>
</resources>